# cytoscan

./: .gitignore  CITATION.cff  CLAUDE.md  LICENSE  README.md  README.txt  cytoscan.py  main.py  organize_experiment.py  pyproject.toml
.github/workflows/: publish.yml  tests.yml
config/: lab.yaml  lab_cfg.yaml
configs/: default.yaml
src/: cell_detector.py  channel_detector.py  ilastik_runner.py
src/cytoscan/: __init__.py  __main__.py  _logging.py  analysis.py  cell_detector.py  channel_detector.py  cli.py  config.py  detections.py  export.py  findings.py  flagging.py  ilastik_runner.py  pipeline.py  preprocessing.py  visualization.py
src/cytoscan/templates/: default.yaml
tests/: test_basic.py
